<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail_root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hero_detail_img_height"
        android:contentDescription="@string/cd_item_detail_image"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/txt_name_label"
        style="@style/ItemDetailLabel"
        android:layout_marginTop="@dimen/hero_detail_title_margin_top"
        android:text="@string/label_name"
        tools:text="Name label" />

    <TextView
        android:id="@+id/txt_name"
        style="@style/ItemDetailTitle"
        android:layout_marginTop="@dimen/hero_detail_txt_meta_margin_top"
        tools:text="Name" />

    <TextView
        android:id="@+id/txt_status_label"
        style="@style/ItemDetailLabel"
        android:layout_marginTop="@dimen/hero_detail_txt_label_margin_top"
        android:text="@string/label_status"
        tools:text="Status label" />

    <TextView
        android:id="@+id/txt_status"
        style="@style/ItemDetailMeta"
        android:layout_marginTop="@dimen/hero_detail_txt_meta_margin_top"
        tools:text="Status" />

    <TextView
        android:id="@+id/txt_species_label"
        style="@style/ItemDetailLabel"
        android:layout_marginTop="@dimen/hero_detail_txt_label_margin_top"
        android:text="@string/label_species"
        tools:text="Species label" />

    <TextView
        android:id="@+id/txt_species"
        style="@style/ItemDetailMeta"
        android:layout_marginTop="@dimen/hero_detail_txt_meta_margin_top"
        tools:text="Species" />

    <TextView
        android:id="@+id/txt_type_label"
        style="@style/ItemDetailLabel"
        android:layout_marginTop="@dimen/hero_detail_txt_label_margin_top"
        android:text="@string/label_type"
        tools:text="Type label" />

    <TextView
        android:id="@+id/txt_type"
        style="@style/ItemDetailMeta"
        android:layout_marginTop="@dimen/hero_detail_txt_meta_margin_top"
        tools:text="Type" />

    <TextView
        android:id="@+id/txt_gender_label"
        style="@style/ItemDetailLabel"
        android:layout_marginTop="@dimen/hero_detail_txt_label_margin_top"
        android:text="@string/label_gender"
        tools:text="Gender label" />

    <TextView
        android:id="@+id/txt_gender"
        style="@style/ItemDetailMeta"
        android:layout_marginTop="@dimen/hero_detail_txt_meta_margin_top"
        tools:text="Gender" />

</LinearLayout>